build/k8s/tools/data/register/consul/single.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: tools
spec:
  serviceName: consul
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: consul
          image: consul:latest
          args:
            - "agent"
            - "-server"
            - "-bootstrap-expect=1"
            - "-ui"
            - "-node=consulServer"
            - "-data-dir=/data"
            - "-bind=0.0.0.0"
            - "-client=0.0.0.0"
            - "-rejoin"
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - containerPort: 8500
              name: ui-port
            - containerPort: 8400
              name: alt-port
            - containerPort: 53
              name: udp-port
            - containerPort: 8443
              name: https-port
            - containerPort: 8080
              name: http-port
            - containerPort: 8301
              name: serflan
            - containerPort: 8302
              name: serfwan
            - containerPort: 8600
              name: consuldns
            - containerPort: 8300
              name: server
      volumes:
        - name: data
          hostPath:
            path: /data/consul
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-consul
  namespace: default
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
  rules:
    - host: consul.my.com.local
      http:
        paths:
          - path: /
            backend:
              serviceName: consul
              servicePort: 8500
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  labels:
    name: consul
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8500
      targetPort: 8500
    - name: https
      port: 8443
      targetPort: 8443
    - name: rpc
      port: 8400
      targetPort: 8400
    - name: serflan-tcp
      protocol: "TCP"
      port: 8301
      targetPort: 8301
    - name: serflan-udp
      protocol: "UDP"
      port: 8301
      targetPort: 8301
    - name: serfwan-tcp
      protocol: "TCP"
      port: 8302
      targetPort: 8302
    - name: serfwan-udp
      protocol: "UDP"
      port: 8302
      targetPort: 8302
    - name: server
      port: 8300
      targetPort: 8300
    - name: consuldns
      port: 8600
      targetPort: 8600
  selector:
    app: consul
---
apiVersion: v1
kind: Service
metadata:
  name: consul-nodeport
  labels:
    name: consul
spec:
  type: NodePort
  ports:
    - name: server
      port: 8300
      nodePort: 8300
      targetPort: 8300
    - name: consuldns
      port: 8600
      nodePort: 8600
      targetPort: 8600
  selector:
    app: consul
